[package]
name = "Rift"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui="0.30"
color-eyre = "0.6.3"

tokio = { version = "1.52.3", features = ["full"] }

reqwest = { version = "0.13.4", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
